--- a/Homeworks/HW2/readme
+++ b/Homeworks/HW2/readme
@@ -1,4 +1,5 @@
 shareLaTeX:
 https://www.sharelatex.com/4262861825mmndhmccjsxt
+(currently I can't upload files to sharelatex, no idea what's going on...)
 
 Beer is good for you.
