--- a/Homeworks/HW2/readme
+++ b/Homeworks/HW2/readme
@@ -2,4 +2,6 @@ shareLaTeX:
 https://www.sharelatex.com/4262861825mmndhmccjsxt
 (currently I can't upload files to sharelatex, no idea what's going on...)
 
+![task4](https://github.com/Lef-F/ComPhy/blob/master/Homeworks/HW2/fig-alpha-optimization.png "Task4 alpha/beta optimization")
+
 Beer is good for you.
